crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__compare__starred_expression.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/compare/starred_expression.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            28,
        ),
        range: 0..39,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        6,
                    ),
                    range: 0..7,
                    value: Compare(
                        ExprCompare {
                            node_index: NodeIndex(
                                5,
                            ),
                            range: 0..7,
                            left: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        1,
                                    ),
                                    range: 0..1,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            ops: [
                                GtE,
                            ],
                            comparators: [
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(
                                            4,
                                        ),
                                        range: 5..7,
                                        value: Name(
                                            ExprName {
                                                node_index: NodeIndex(
                                                    3,
                                                ),
                                                range: 6..7,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        13,
                    ),
                    range: 8..19,
                    value: Compare(
                        ExprCompare {
                            node_index: NodeIndex(
                                12,
                            ),
                            range: 8..19,
                            left: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        8,
                                    ),
                                    range: 8..9,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            ops: [
                                NotIn,
                            ],
                            comparators: [
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(
                                            11,
                                        ),
                                        range: 17..19,
                                        value: Name(
                                            ExprName {
                                                node_index: NodeIndex(
                                                    10,
                                                ),
                                                range: 18..19,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        20,
                    ),
                    range: 21..27,
                    value: Starred(
                        ExprStarred {
                            node_index: NodeIndex(
                                19,
                            ),
                            range: 21..27,
                            value: Compare(
                                ExprCompare {
                                    node_index: NodeIndex(
                                        18,
                                    ),
                                    range: 22..27,
                                    left: Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                15,
                                            ),
                                            range: 22..23,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    ops: [
                                        Lt,
                                    ],
                                    comparators: [
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(
                                                    17,
                                                ),
                                                range: 26..27,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        27,
                    ),
                    range: 28..39,
                    value: Starred(
                        ExprStarred {
                            node_index: NodeIndex(
                                26,
                            ),
                            range: 28..39,
                            value: Compare(
                                ExprCompare {
                                    node_index: NodeIndex(
                                        25,
                                    ),
                                    range: 29..39,
                                    left: Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                22,
                                            ),
                                            range: 29..30,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    ops: [
                                        IsNot,
                                    ],
                                    comparators: [
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(
                                                    24,
                                                ),
                                                range: 38..39,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x >= *y
  |      ^^ Syntax Error: Starred expression cannot be used here
2 | x not in *y
  |


  |
1 | x >= *y
2 | x not in *y
  |          ^^ Syntax Error: Starred expression cannot be used here
3 |
4 | *x < y
  |


  |
2 | x not in *y
3 |
4 | *x < y
  |  ^^^^^ Syntax Error: Comparison expression cannot be used here
5 | *x is not y
  |


  |
4 | *x < y
5 | *x is not y
  |  ^^^^^^^^^^ Syntax Error: Comparison expression cannot be used here
  |
